--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "core-js": "^3.31.1",
     "parcel": "^2.9.3",
     "postcss": "^8.4.26",
+    "process": "^0.11.10",
     "swiper": "^10.0.4",
     "tailwindcss": "^3.3.3"
   }
