--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.9.3",
     "core-js": "^3.31.1",
     "parcel": "^2.9.3",
     "postcss": "^8.4.26",
